# y0-save-editor

./: .gitattributes  .gitignore  README.md
backend/: Cargo.toml  cbindgen.toml
backend/src/: bin.rs  lib.rs
backend/src/parser/: definitions.rs  mod.rs
backend/tests/: save_test.sav  tests.rs
frontend/: Form1.Designer.cs  Form1.cs  Program.cs  backend.hpp  frontend.csproj  frontend.sln  frontend2.pro  itemdialog.cpp  itemdialog.h  itemdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  utils.h  yakuzaitem.cpp  yakuzaitem.h
frontend/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
frontend2/: frontend2.pro  mainwindow.h  mainwindow.ui
