[package]
name = "backend"
version = "0.1.0"
authors = ["Sebastián Aedo <sebastian.aedo@sansano.usm.cl>"]
edition = "2018"

[dependencies]
deku = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "3.0.0-beta.2"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
path = "src/bin.rs"
name = "y0-save-editor-cli"
